# MCP

./: =1.7.1  main.py  pyproject.toml  pytest.ini  test_tools.py
tests/: conftest.py  simple_test.py  test_core.py  test_tools.py  test_tools_pytest.py
